# ytndyxbot

./: .gitignore  packages_termux.txt  patch.py  pyproject.toml  requirements_termux.txt  requirements_windows.txt
patch_libs/aiopath/: path.py
patch_libs/jsbeautifier/unpackers/: packer.py
patch_libs/pymediainfo/: __init__.py
patch_libs/pyvideothumbnailer/: videothumbnailer.py
patch_libs/yt_dlp/downloader/: dash.py  external.py
patch_libs/yt_dlp/extractor/: bunkr.py  camcaps.py  dropbox.py  filemoon.py  genericembeds.py  hstreammoe.py  imlive.py  internetchicks.py  lazy_extractors.py  mediadelivery.py  pmvhaven.py  pornhd8k.py  porntn.py  streamtape.py  stripchat.py  tiktok.py  yandexdisk.py
ytndyxbot/src/: __main__.py  cache.py  commands.py  constants.py  messages.py  utils.py
ytndyxbot/src/config/: __init__.py  env_example.txt
ytndyxbot/src/database/: __init__.py  _base.py  _mysql.py  _sqlite.py
ytndyxbot/src/enums/: __init__.py  _base.py
ytndyxbot/src/exceptions/: __init__.py  _base.py
ytndyxbot/src/helpers/: __init__.py  _afterdownload.py  _cookie.py  _download.py  _message.py
ytndyxbot/src/manager/: __init__.py  _base.py  _media.py
ytndyxbot/src/queues/: __init__.py  _base.py  _cams.py
ytndyxbot/src/scrappers/: __init__.py  bunkr.py  camgirlfinder.py  hstream.py  partychan.py  rutube.py  vk.py  youtube.py
ytndyxbot/src/wrappers/: __init__.py  _aiohttp.py  _curlcffi.py  _ytdlp.py
