[project]
name = "ytndyxbot"
version = "0.1.0"
description = "Bot TG downloading videos with yt-dlp"
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/ndyanx/ytndyxbot"

# Dependencias generales
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.8",
    "aiomysql>=0.2.0",
    "aiopath>=0.7.7",
    "aiosqlite>=0.20.0",
    "beautifulsoup4==4.12.3",
    "curl-cffi==0.5.10",
    "ffmpeg-python==0.2.0",
    "jsbeautifier==1.15.1",
    "PyExecJS==1.5.1",
    "pyrofork>=2.3.51",
    "python-dotenv==1.0.1",
    "pyvideothumbnailer==2.1.0",
    "validators>=0.34.0",
    "yt-dlp[default]",
]

# Dependencias para Windows
[project.optional-dependencies]
windows = [
    "winloop==0.1.7",
    "mtprotocrypt==1.2.6.5b0",  # Dependencia específica de Windows
]

# Dependencias para Linux
linux = [
    "TgCrypto==1.2.5",  # Dependencia específica de Linux
    "uvloop==0.19.0",
]

[tool.ruff]
target-version = "py310"
